--- a/options.html
+++ b/options.html
@@ -73,6 +73,10 @@ body {
 <p>Password:</p>
 <p><input type="password" id="user-password" oninput="markDirty()"></p>
 
+<div class="section-header first">Update request URL</div>
+<p>Enter your redmine update url (live empty for receiving your personal tasks):</p>
+<p><input type="text" id="redmine-update-url" oninput="markDirty()"> <em>(eg "issues.json?query_id=6")</em></p>
+
 <div class="section-header first">Issues</div>
 <p>Show number of issues:</p>
 <ul>
@@ -134,7 +138,7 @@ body {
 <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 
 <script>
-var redmineUrlTextbox, showActiveIssues, showNewIssues, showActiveNewIssues, iconPressUrl, iconPressDontRedirect;
+var redmineUrlTextbox, redmineUpdateUrlTextbox, showActiveIssues, showNewIssues, showActiveNewIssues, iconPressUrl, iconPressDontRedirect;
 var userLogin, userPassword;
 var showNotifications, notificationsType, notificationsTimeout, notificationFieldsDiv, notificationFields, notificationColors;
 var saveButton;
@@ -143,6 +147,7 @@ init();
 
 function init() {
 	redmineUrlTextbox = document.getElementById("redmine-url");
+	redmineUpdateUrlTextbox = document.getElementById("redmine-update-url");
 
 	showActiveIssues = document.getElementById("issues-active");
 	showNewIssues = document.getElementById("issues-new");
@@ -192,6 +197,7 @@ function init() {
 function loadDefaults()
 {
 	redmineUrlTextbox.value = localStorage.redmineUrl || "";
+	redmineUpdateUrlTextbox.value = localStorage.redmineUpdateUrl || "";
 
 	showActiveIssues.checked = false;
 	showNewIssues.checked = false;
@@ -267,6 +273,7 @@ function toggleNotificationFields() {
 
 function save() {
 	var newUrl = redmineUrlTextbox.value;
+	var updateUrl = redmineUpdateUrlTextbox.value;
 
 	if( !isUrl(newUrl) ) {
 		loadDefaults();
@@ -338,6 +345,7 @@ function save() {
 	localStorage.notificationsTimeout = newTimeout;
 
 	localStorage.redmineUrl = newUrl;
+	localStorage.redmineUpdateUrl = updateUrl;
 	markClean();
 
 	chrome.extension.getBackgroundPage().init();
