add custom update delay option

--- a/background.html
+++ b/background.html
@@ -12,8 +12,8 @@ var rotation = 0;
 var loadingAnimation = new LoadingAnimation();
 
 //REQUEST VARIABLES
-var pollIntervalMin = 1000 * 60;  // 1 minute
-var pollIntervalMax = 1000 * 60 * 60;  // 1 hour
+var DEFAULT_POLL_INTERVAL_MIN_MS = 1000 * 60;  // 1 minute
+var DEFAULT_POLL_INTERVAL_MAX_MS = 1000 * 60 * 60;  // 1 hour
 var requestFailureCount = 0;  // used for exponential backoff
 var requestTimeout = 1000 * 5;  // 5 seconds
 var requestTimeoutHandler = null;
@@ -42,6 +42,22 @@ function init() {
 	loadingAnimation.start();
 
 	startRequest();
+}
+
+function getUpdateDelayMinMS() {
+	if( !localStorage.updateDelayMinMS ) {
+		return DEFAULT_POLL_INTERVAL_MIN_MS;
+	}
+
+	return localStorage.updateDelayMinMS;
+}
+
+function getUpdateDelayMaxMS() {
+	if( !localStorage.updateDelayMaxMS ) {
+		return DEFAULT_POLL_INTERVAL_MAX_MS;
+	}
+
+	return localStorage.updateDelayMaxMS;
 }
 
 function getRedmineUrl() {
@@ -103,6 +119,8 @@ function goToRedmine() {
 function scheduleRequest() {
 	var randomness = Math.random() + 1;
 	var exponent = Math.pow(2, requestFailureCount);
+	var pollIntervalMin = getUpdateDelayMinMS();
+	var pollIntervalMax = getUpdateDelayMaxMS();
 	var delay = Math.min(randomness * pollIntervalMin * exponent, pollIntervalMax);
 	delay = Math.round(delay);
 
