Icon loading animation moved to separate class.

--- a/background.html
+++ b/background.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-<script src='js/lib/Base64.js'></script>
-<script src='js/background.js'></script>
+	<script src='js/lib/Base64.js'></script>
+	<script src='js/classes/IconAnimation.class.js'></script>
+	<script src='js/background.js'></script>
 </head>
 <body onload="init()">
-<img id="logged_in" src="img/redmine_logged_in.png" />
-<canvas id="canvas" width="19" height="19"></canvas>
+	<img id="image" src="img/redmine_logged_in.png" />
+	<canvas id="canvas" width="19" height="19"></canvas>
 </body>
 </html>
