Fancy settings set up.

--- a/background.html
+++ b/background.html
@@ -2,6 +2,8 @@
 <head>
 	<script src='js/lib/Base64.js'></script>
 	<script src='js/classes/IconAnimation.class.js'></script>
+	<script src='fancy-settings/source/lib/store.js'></script>
+	<script src='js/storeInit.js'></script>
 	<script src='js/background.js'></script>
 </head>
 <body onload="init()">
