--- a/notification.html
+++ b/notification.html
@@ -64,7 +64,9 @@ body {
 	color: gray;
 }
 </style>
-<script type="text/javascript" src='js/notification.js'></script>
+	<script src='fancy-settings/source/lib/store.js'></script>
+	<script src='js/storeInit.js'></script>
+	<script type="text/javascript" src='js/notification.js'></script>
 </head>
 <body onload="init()">
 	<div id="wrapper">
