Manifest updated to version 2.

--- a/background.html
+++ b/background.html
@@ -6,7 +6,7 @@
 	<script src='js/storeInit.js'></script>
 	<script src='js/background.js'></script>
 </head>
-<body onload="init()">
+<body>
 	<img id="image" src="img/redmine_logged_in.png" />
 	<canvas id="canvas" width="19" height="19"></canvas>
 </body>
