--- a/fancy-settings/source/index.html
+++ b/fancy-settings/source/index.html
@@ -37,7 +37,7 @@
                 <div id="share-container">
                     <p><g:plusone size="medium" href="https://chrome.google.com/webstore/detail/cmfcfjopbfmekonldgghddhkphapbpek"></g:plusone></p>
                     <p><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://chrome.google.com/webstore/detail/cmfcfjopbfmekonldgghddhkphapbpek" data-text="Redmine Issues Checker" data-count="horizontal">&nbsp;</a></p>
-                    <p><iframe src="http://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fcmfcfjopbfmekonldgghddhkphapbpek&amp;send=false&amp;layout=button_count&amp;width=50&amp;show_faces=false&amp;action=recommend&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:130px; height:21px;" allowTransparency="true"></iframe></p>
+                    <p><iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fchrome.google.com%2Fwebstore%2Fdetail%2Fcmfcfjopbfmekonldgghddhkphapbpek&amp;send=false&amp;layout=button_count&amp;width=50&amp;show_faces=false&amp;action=recommend&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:130px; height:21px;" allowTransparency="true"></iframe></p>
                 </div>
             </div>
         </div>
@@ -47,6 +47,6 @@
             </div>
         </div>
      <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-     <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+     <script type="text/javascript" src="https://platform.twitter.com/widgets.js"></script>
     </body>
 </html>
