--- a/fancy-settings/source/index.html
+++ b/fancy-settings/source/index.html
@@ -20,6 +20,7 @@
         <script src="lib/mootools-core.js"></script>
         <script src="lib/store.js"></script>
         <script src="js/classes/tab.js"></script>
+        <script src="../../js/classes/NotificationsProxy.class.js"></script>
         <script src="js/classes/setting.js"></script>
         <script src="js/classes/search.js"></script>
         <script src="js/classes/fancy-settings.js"></script>
