Theme support refactoring

--- a/background.html
+++ b/background.html
@@ -4,6 +4,7 @@
 	<script src='js/classes/IconAnimation.class.js'></script>
 	<script src='fancy-settings/source/lib/store.js'></script>
 	<script src='js/storeInit.js'></script>
+	<script src='js/classes/ThemeManager.class.js'></script>
 	<script src='js/classes/NotificationsProxy.class.js'></script>
 	<script src='js/background.js'></script>
 </head>
